Create CRUD Scaffolding for Owners

--- a/GIWEB/appsettings.json
+++ b/GIWEB/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GIWEBContext": "Server=(localdb)\\mssqllocaldb;Database=GIWEBContext-1186e5a1-ff67-412f-b207-30f7711cfeb0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
