--- a/GIWEB/appsettings.json
+++ b/GIWEB/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "GIWEBContext": "Server=(localdb)\\mssqllocaldb;Database=GIWEBContext-1186e5a1-ff67-412f-b207-30f7711cfeb0;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "GIWEBContext": "server=localhost;userid=root;password=01234567;database=GIWEBappdb"
+    }
 }
