Update some class and create CRUD and views for properties

--- a/GIWEB/appsettings.json
+++ b/GIWEB/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "GIWEBContext": "server=localhost;userid=root;password=01234567;database=GIWEBappdb"
+        "GIWEBContext": "server=localhost;userid=root;password=01234567;database=giwebappdb"
     }
 }
