--- a/GIWEB/GIWEB.csproj
+++ b/GIWEB/GIWEB.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200820143341_OtherEntities.cs" />
+    <Compile Remove="Migrations\20200820143341_OtherEntities.Designer.cs" />
+    <Compile Remove="Migrations\20200820143426_OtherEntities.cs" />
+    <Compile Remove="Migrations\20200820143426_OtherEntities.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
@@ -20,15 +27,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Guarantors\" />
-    <Folder Include="Views\Contracts\" />
-    <Folder Include="Views\Plots\" />
-    <Folder Include="Views\Spouses\" />
-    <Folder Include="Views\Tenants\" />
-    <Folder Include="Views\Properties\" />
   </ItemGroup>
 
 </Project>
